--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="/css/style.css">
+<!--   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/home.css">
-  
-  <title>Scriptomania</title>
+ -->  
 </head>
 
 {{!-- <body> --}}
@@ -21,6 +20,5 @@
   {{!-- </div> --}}
 
 </body>
-<footer class="footer">©2019 Scriptomania, Inc.</footer>
 
 </html>
