--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Scriptomania|Home </title>
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
 
   
        <link rel="stylesheet" href="./css/home.css">
@@ -14,8 +13,9 @@
 </head>
 
 <body>
-<div>
-<h1 class = "hero1">Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></img></h1>
+<div >
+<img class="sss" src="./img/scripto.png" alt="Logo" width="80" height="80"></img>
+<h2 class = "hero1">Scriptomania </h2>
 </div>
 <div>
 <h2 class="welcome">Dedicated to Develop Media Industry</h2>
@@ -30,7 +30,7 @@
 <div class="mydiv">
   <button class="btn1"><a class="insidebutton", href="/users/signup">Register Now</a></button>
 
-</div>
+</div><br>
   
 <!-- <section class="row"> -->
   <div class="row">
