--- a/views/users/editprof.handlebars
+++ b/views/users/editprof.handlebars
@@ -1,3 +1,4 @@
+<hmtl>
 <head>
   <meta charset="UTF-8">
   <title>Scriptomania|Edit Profile</title>
@@ -5,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
   
-      <link rel="stylesheet" href="./edit_prof.css">
+      <link rel="stylesheet" href="/css/edit_prof.css">
 
   
 </head>
@@ -14,34 +15,35 @@
               <div class = "lul">
             <table  >
               <tr >
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">Home</a></div></td>
+             {{#if conditionwp}}
+                <td class="topbtn"><a  class ="insidebutton1 " href="/users/writer">Home</a></div></td>
+             {{else}}
+                <td class="topbtn"><a  class ="insidebutton1 " href="/users/producer">Home</a></div></td>
+              {{/if}}
+                <td class="topbtn"><a  class ="insidebutton1 " href="/users/viewprof">My Profile</a></div></td>
 
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">My Profile</a></div></td>
-
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">Logout</a></div></td>
+                <td class="topbtn"><a  class ="insidebutton1 " href="/pages/loggedout">Logout</a></div></td>
               </tr>
             </table>
             </div>
 <section class="Signup-form">
   <div>
-  <img class="sign_image" src="./scripto.png" alt="Logo image" height="80" width="80">  
+  <img class="sign_image" src="/img/scripto.png" alt="Logo image" height="80" width="80">  
   <h1 >Edit profile </h1>
   </div>
 <div class="signup_form">
-  <form action="/users/submit_signup_form" method="POST">
-   
-    
+  <form method ="POST" action="/users/edit_form?_method=PUT">
     <label>Contact Number</label>
     <input type="integer" name="Contact" required placeholder="+92xxx-xxxxxxx"><br><br>
-    <label>Username</label>
-    <input type="text" name="Usename" required placeholder="Username"><br><br>
     <label>Password</label>
     <input type="Password" name="Password" required placeholder="Password"><br><br>
     <label>Confirm password</label>
-    <input type="Password" name="ConfirmPassword" required placeholder="Password"><br><br>
+    <input type="Password" name="ConfirmPassword" required placeholder="Rewrite Password"><br><br>
     <input type="Submit" value="Update">
   </form>
   </div>
 </section>
 
 </body>
+<footer class="footer">©2019 Scriptomania, Inc.</footer>
+</html>
