--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,3 +1,17 @@
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Scriptomania|login</title>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  
+      <link rel="stylesheet" href="/css/style.css">
+
+  
+</head>
+
+
 <script type="text/javascript">
 
 
@@ -33,7 +47,7 @@
     </label>
     <div class="showpass">
     <input type="checkbox" name="show_pass" onclick="showpass();">
-    <label class="showpass">Show Password</label>
+    <label class="shower">Show Password</label>
     </div>
     <br>
     <input type="submit" value="Login">
@@ -46,3 +60,6 @@
   
 
 </body>
+<footer class="footer">©2019 Scriptomania, Inc.</footer>
+</html>
+
