--- a/views/users/producer.handlebars
+++ b/views/users/producer.handlebars
@@ -15,7 +15,7 @@
         <div class = "lul">
             <table  >
               <tr >
-                <td class="topbtn"><a  class ="insidebutton1 " href="/pages/producer">My profile</a></div></td>
+                <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My profile</a></div></td>
 
                 <td class="topbtn"><a  class ="insidebutton1 " href="/pages/loggedout">Log out</a></div></td>
               </tr>
@@ -25,7 +25,7 @@
       <div class="aaa">
         <img class="sss" src="/img/scripto.png" alt="Logo" width="80" height="80"></img><br><h2 class = "hero1">Scriptomania </h2>
       </div>
-<h2 class="welcome">Welcome Hamza</h2>
+<h2 class="welcome">Welcome {{name}}</h2>
 
 <div class="outer">
   <h3 class="heroo">Dashboard</h3>
@@ -33,9 +33,9 @@
 
   <div>
 
-      <a class="insidebutton", href="/pages/editprofile"><button class="btn">Edit Profile</button></a></div>
+      <a class="insidebutton", href="/users/editprofp"><button class="btn">Edit Profile</button></a></div>
       <div>
-      <a class="insidebutton", href="/users/signup"><button class="btn">Read Scripts</button></a>
+      <a class="insidebutton", href="/users/read"><button class="btn">Read Scripts</button></a>
 </div>
 <div>
       <a class="insidebutton", href="/users/signup"><button class="btn1">View Transaction History</button></a></div>
