--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,12 @@
 }
 
 body {
+  background: #293f50;
+  color: #888;
   font: 300 16px/22px "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
   text-align: center;
 }
+
 
 .shower{
   color: #888
@@ -39,7 +42,7 @@ body {
 }
 
 
-.login-form input[type="email"], .login-form input[type="password"] {
+.login-form input[type="text"], .login-form input[type="password"] {
   width: 100%;
   border: 1px solid #314d89;
   outline: none;
@@ -49,7 +52,7 @@ body {
   font-family: 'Lato', sans-serif;
   cursor: pointer;
 }
-.login-form input[type="email"] {
+.login-form input[type="text"] {
   border-bottom: none;
   border-radius: 4px 4px 0 0;
   padding-bottom: 13px;
@@ -104,12 +107,12 @@ clear: both;
   border: 1px solid #2d416d;
   box-shadow: 0 1px #5670A4 inset, 0 0 10px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  width: 600px;
-  height: 850px;
+  width: 40%;
+  min-width: 400px;
+  height: 40%;
   margin: 60px auto;
-  padding: 10px 30px 10px 30px;
+  padding: 50px 30px 0 30px;
   text-align: center;
-  /*color:#888;*/
 }
 .Signup-form h1 {
   margin: 0 0 50px 0;
@@ -157,3 +160,10 @@ color: black;
   left: 190px;
   *overflow: hidden;
 }
+.footer{
+  /*color:white;*/
+  font-size: 1vw;
+  position:fixed;
+  bottom: 0;
+  width: 100%;}
+  
