--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,38 +1,66 @@
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Scriptomania|Register</title>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  
+      <link rel="stylesheet" href="/css/register.css">
+
+  
+<script type="text/javascript">
+
+function pop(){
+  alert("You are about to agree the terms and condtions")
+}
+
+
+</script>
+
+</head>
+<body>
 <section class="Signup-form">
   <div>
   <img class="sign_image" src="/img/scripto.png" alt="Logo image" height="80" width="80">  
   <h1 >Sign Up to Scriptomania</h1>
   </div>
 <div class="signup_form">
-  <form action="/users/submit_signup_form" method="POST">
+  <form action="/users/submit_signup_form" method = "POST">
     <label>Name</label>
-    <input type="text" name="Name" required placeholder="Name"><br><br>
+    <input type="text"  name="Name" required placeholder="Name" maxlength="20" required pattern="[A-Za-z]+"></input>
+    <br><br>
     <label>Email</label>
-    <input type="email" name="email" required placeholder="Email"><br><br>
+    <input type="email" name="email" required placeholder="Email" maxlength="30" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$+"><br><br>
     <label>Contact Number</label>
-    <input type="integer" name="Contact" required pattern="[0-9]{11}" placeholder="+92xxx-xxxxxxx"><br><br>
+    <input type="integer" name="Contact"  required placeholder="0092-xxx-xxxxxxx" maxlength="14" required pattern="[0-9]+"><br><br>
     <label>CNIC</label>
-    <input type="text" name="CNIC" required placeholder="xxxxx-xxxxxxx-x"><br><br>
+    <input type="text" name="CNIC" required placeholder="xxxxx-xxxxxxx-x"  maxlength="15" required pattern="[0-9-]+"><br><br>
     <label>Date of Birth</label>
     <input type="Date" name="date" required><br><br>
     <label>Username</label>
-    <input type="text" name="Username" required placeholder="Username"><br><br>
+    <input type="text" name="Username"  required placeholder="Username" maxlength="10" required pattern="[A-Za-z0-9._-]+"><br><br>
     <label>Password</label>
-    <input type="Password" name="Password" required placeholder="Password"><br><br>
+    <input type="Password" name="Password" required placeholder="Password" maxlength="15"><br><br>
     <label>Confirm password</label>
-    <input type="Password" name="Password2" required placeholder="Password"><br>
-    <input type="radio" name="user" value="Writer">
-    <label>Writer</label>
-    <input type="radio" name="user" value="Producer">
-    <label>Producer</label><br><br>
-    <input type="checkbox" name="Agree">
-    <label>I agree to the terms and conditions</labedl>
+    <input type="Password" name="ConfirmPassword" required placeholder="Password" maxlength="15"><br>
     
-
+    <div>
+    <label class="labell"><input class="inputt" type="radio" name="user" value="Writer"></input><br><br>Writer</label>
+   
+    <label class="labell"><input class="inputt" type="radio" name="user" value="Producer"></input><br><br>Producer</label>
+    
+    <input type="checkbox" name="Agree"></input>
+  
+    <label>I agree to the <a href ="#" onclick="pop();">terms and conditions</a></label>
+    <br>
+   </div>   
     
     <input type="Submit" value="signup">
-
   </form>
   </div>
   <h4 style ="color: black"><a href = "login">Already have an account? Click here to login!</a></h4>
 </section>
+</body>
+<footer class="footer">©2019 Scriptomania, Inc.</footer>
+</html>
