--- a/views/users/buy.handlebars
+++ b/views/users/buy.handlebars
@@ -115,7 +115,7 @@ span.price {
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="/users/buy_form" method = "POST">
+      <form method ="post" action="/users/buy_form/{{file._id}}">
       
         <div class="row">
           <div class="col-50">
@@ -164,7 +164,7 @@ span.price {
               <div class="col-50">
                 <label for="cvv">CVV</label>
                 <input type="text" id="cvv" name="cvv" placeholder="352">
-                <h3 style = "text-align: center;">Total payment ${{price}}</h3>
+                <h3 style = "text-align: center;">Total payment ${{file.metadata.price}}</h3>
               </div>
             </div>
           </div>
