--- a/views/users/producer.handlebars
+++ b/views/users/producer.handlebars
@@ -17,7 +17,7 @@
               <tr >
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My profile</a></div></td>
 
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Log out</a></div></td>
+                <td class="topbtn"><a  class ="insidebutton1 " href="/pages/loggedout">Log out</a></div></td>
               </tr>
             </table>
             </div>
