--- a/views/users/viewprof.handlebars
+++ b/views/users/viewprof.handlebars
@@ -19,7 +19,7 @@
               {{/if}}
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">My Profile</a></div></td>
 
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Logout</a></div></td>
+                <td class="topbtn"><a  class ="insidebutton1 " href="/pages/loggedout">Logout</a></div></td>
               </tr>
             </table>
             </div>
