--- a/views/users/writer.handlebars
+++ b/views/users/writer.handlebars
@@ -10,7 +10,7 @@
     <table>
       <tr>
         <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My profile</a></div></td>
-        <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Logout</a></div></td>
+        <td class="topbtn"><a  class ="insidebutton1 " href="/pages/loggedout">Logout</a></div></td>
       </tr>
     </table>
   </div>
